--- a/services/sasha-ui/src/index.html
+++ b/services/sasha-ui/src/index.html
@@ -6,7 +6,7 @@ even using jQuery. -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <head>
-    <script src="/static/vendor/js/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 </head>
 
 <h2>This is Sasha.</h2>
