--- a/services/sasha-ui/src/index.html
+++ b/services/sasha-ui/src/index.html
@@ -28,7 +28,7 @@ to design it. -->
         sendMessage('ifttt', body);
     });
 
-    $('#salt-lamp').change(function (e) {
+    $('#downstairs-lamp').change(function (e) {
         var body = {
             action: e.target.checked ? 'wemo_switch_2_on' : 'wemo_switch_2_off'
         };
