--- a/services/sasha-ui/src/index.html
+++ b/services/sasha-ui/src/index.html
@@ -11,17 +11,24 @@ to design it. -->
 
 <h2>This is Sasha.</h2>
 <div>
-    <input type="checkbox" id="salt-lamp" name="interest" value="salt-lamp">
-    <label id="salt-lamp-name" for="salt-lamp">Salt Lamp</label>
+    <!-- <input type="checkbox" id="salt-lamp" name="interest" value="salt-lamp"> -->
+    <!-- <label id="salt-lamp-name" for="salt-lamp">Salt Lamp</label> -->
+    <p>Salt Lamp</p>
+    <button id="wemo-switch-1-on">On</button>
+    <button id="wemo-switch-1-off">Off</button>
 
     <br>
-    <input type="checkbox" id="downstairs-lamp" name="interest" value="downstairs-lamp">
-    <label id="downstairs-lamp-name" for="downstairs-lamp">Downstairs Lamp</label>
+    <!-- <input type="checkbox" id="downstairs-lamp" name="interest" value="downstairs-lamp"> -->
+    <!-- <label id="downstairs-lamp-name" for="downstairs-lamp">Downstairs Lamp</label> -->
+    <p>Downstairs Lamp</p>
+    <button id="wemo-switch-2-on">On</button>
+    <button id="wemo-switch-2-off">Off</button>
 </div>
 
 
 <script>
 
+    /*
     $('#salt-lamp').change(function (e) {
         var body = {
             action: e.target.checked ? 'wemo_switch_1_on' : 'wemo_switch_1_off'
@@ -33,6 +40,27 @@ to design it. -->
         var body = {
             action: e.target.checked ? 'wemo_switch_2_on' : 'wemo_switch_2_off'
         };
+        sendMessage('ifttt', body);
+    });
+    */
+
+    $('#wemo-switch-1-on').click(function (e) {
+        var body = { action: 'wemo_switch_1_on' };
+        sendMessage('ifttt', body);
+    });
+
+    $('#wemo-switch-1-off').click(function (e) {
+        var body = { action: 'wemo_switch_1_off' };
+        sendMessage('ifttt', body);
+    });
+
+    $('#wemo-switch-2-on').click(function (e) {
+        var body = { action: 'wemo_switch_2_on' };
+        sendMessage('ifttt', body);
+    });
+
+    $('#wemo-switch-2-off').click(function (e) {
+        var body = { action: 'wemo_switch_2_off' };
         sendMessage('ifttt', body);
     });
 
