--- a/functions/map/index.html
+++ b/functions/map/index.html
@@ -11,59 +11,10 @@ to design it. -->
 
 <h2>This is Sasha.</h2>
 <div>
-    <!-- <input type="checkbox" id="salt-lamp" name="interest" value="salt-lamp"> -->
-    <!-- <label id="salt-lamp-name" for="salt-lamp">Salt Lamp</label> -->
-    <p>Salt Lamp</p>
-    <button id="wemo-switch-1-on">On</button>
-    <button id="wemo-switch-1-off">Off</button>
-
-    <br>
-    <!-- <input type="checkbox" id="downstairs-lamp" name="interest" value="downstairs-lamp"> -->
-    <!-- <label id="downstairs-lamp-name" for="downstairs-lamp">Downstairs Lamp</label> -->
-    <p>Downstairs Lamp</p>
-    <button id="wemo-switch-2-on">On</button>
-    <button id="wemo-switch-2-off">Off</button>
+    hi
 </div>
 
 
 <script>
-
-    $('#wemo-switch-1-on').click(function (e) {
-        var body = { action: 'wemo_switch_1_on' };
-        sendMessage('ifttt', body);
-    });
-
-    $('#wemo-switch-1-off').click(function (e) {
-        var body = { action: 'wemo_switch_1_off' };
-        sendMessage('ifttt', body);
-    });
-
-    $('#wemo-switch-2-on').click(function (e) {
-        var body = { action: 'wemo_switch_2_on' };
-        sendMessage('ifttt', body);
-    });
-
-    $('#wemo-switch-2-off').click(function (e) {
-        var body = { action: 'wemo_switch_2_off' };
-        sendMessage('ifttt', body);
-    });
-
-    // Hit lambda function that will generate an SNS message. In the future I will consider sending a message
-    // directly to SNS.
-    function sendMessage(topic, body) {
-        var data = JSON.stringify(body);
-        $.ajax({
-            url: `/sns?topic=${topic}`,
-            type: 'POST',
-            data: data,
-            // beforeSend: function () {},
-            success: function (res) {
-                console.log('success:', res);
-            },
-            error: function (err) {
-                console.log('sendMessage() error:', err);
-            }
-        });
-    }
-
+consol.log('hey')l
 </script>
