--- a/functions/map/index.html
+++ b/functions/map/index.html
@@ -3,20 +3,21 @@
   <head>
     <style>
        #map {
-        height: 100%;
+        height: 400px;
         width: 100%;
        }
     </style>
   </head>
   <body>
-    <h3>My Google Maps Demo</h3>
     <div id="map"></div>
     <script>
+      var latitude = parseFloat('{{ latitude }}');
+      var longitude = parseFloat('{{ longitude }}');
       function initMap() {
-        var location = { lat: -25.363, lng: 131.044 };
+        var location = { lat: latitude, lng: longitude };
         console.log('location:', location);
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
+          zoom: 8,
           center: location
         });
         var marker = new google.maps.Marker({
