--- a/functions/map/index.html
+++ b/functions/map/index.html
@@ -10,6 +10,7 @@
     </style>
   </head>
   <body>
+    <p>Last Updated at <span id="timestamp">{{ timestamp }}</span></p>
     <div id="map"></div>
     <script>
       var latitude = parseFloat('{{ latitude }}');
