--- a/functions/map/index.html
+++ b/functions/map/index.html
@@ -20,11 +20,11 @@
         console.log('location:', location);
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 8,
-          center: location
+          center: location,
         });
         var marker = new google.maps.Marker({
           position: location,
-          map: map
+          map: map,
         });
       }
     </script>
